# Solarprognose.de-Community

./: Dashboard.yaml  README.md  hacs.json  pyproject.toml  pytest.ini
.github/workflows/: hacs.yml  pytest.yml
custom_components/link_solarprognose_de/: config_flow.py  sensor.py  strings.json
custom_components/link_solarprognose_de/translations/: de.json
custom_components/solarprognose_de_community/: __init__.py  config_flow.py  coordinator.py  diagnostics.py  manifest.json  sensor.py  strings.json
custom_components/solarprognose_de_community/dashboards/: solarprognose_de_community_section.yaml
custom_components/solarprognose_de_community/translations/: de.json  en.json
link_solarprognose_de/: __init__.py
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_energy.py  test_sensor.py
